--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "liveServer.settings.multiRootWorkspaceName": "exm03"
+    "liveServer.settings.multiRootWorkspaceName": "exm03",
+    "cSpell.words": [
+        "Colisao"
+    ]
 }
